--- a/index.html
+++ b/index.html
@@ -17,19 +17,33 @@
                 <form id="form-imc" action="" name="formImc">
                     <div class="mb">
                         <label for="size">Taille en cm</label>
-                        <input type="text" name="size" id="size" placeholder="exemple: 175" required autofocus/>
+                        <input
+                            type="text"
+                            name="size"
+                            id="size"
+                            placeholder="exemple: 175"
+                            required
+                            autofocus
+                        />
                     </div>
                     <div class="mb">
                         <label for="weight">Poids</label>
-                        <input type="text" id="weight" placeholder="poids en kg" required/>
+                        <input
+                            type="text"
+                            id="weight"
+                            placeholder="poids en kg"
+                            required
+                        />
                     </div>
-                    <input type="submit" value="Calculer" id="submit">
+                    <input type="submit" value="Calculer" id="submit" />
                 </form>
             </div>
 
             <div class="info-wrapper">
                 <table>
-                    <caption>interprétation de l'indice de masse corporelle (imc)</caption>
+                    <caption>
+                        interprétation de l'indice de masse corporelle (imc)
+                    </caption>
                     <tr>
                         <td>Inférieur à 16</td>
                         <td>Anorexie ou dénutrition</td>
